--- a/meetup/templates/signup.html
+++ b/meetup/templates/signup.html
@@ -27,8 +27,8 @@
     <section id="signup">
         <div class="container">
             <h1>Sign Up</h1>
-            <form action="" method="">
-
+            <form action="" method="POST">
+{% csrf_token %}
                 <input type="text" placeholder="Enter username" name="username" required><br>
                 <input type="email" placeholder="Enter email" name="email" required><br>
                 <input type="password" placeholder="Enter password" name="password" required><br>
