--- a/meetup/templates/registration/signup.html
+++ b/meetup/templates/registration/signup.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Questioner|Login</title>
+    <title>Questioner|SignUp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/login.css">
+    <link rel="stylesheet" href="../static/css/signup.css">
 </head>
 
 <body>
@@ -17,24 +17,25 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="signup.html">SignUp</a></li>
-                    <li><a href="admin.html">Admin</a></li>
+                    <li class="current"><a href="/">Home</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/admin">Admin</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section id="signup">
         <div class="container">
-            <h1>Login</h1>
-            <form action="home.html">
-{% csrf_token%}
+            <h1>Sign Up</h1>
+            <form action="" method="POST">
+
+                <input type="text" placeholder="Enter username" name="username" required><br>
                 <input type="email" placeholder="Enter email" name="email" required><br>
                 <input type="password" placeholder="Enter password" name="password" required><br>
-                <button type="submit" class="button">Login</button>
+                <input type="password" placeholder="Confirm password" name="confirm_password" required><br><br>
+                <button type="submit" class="button">SignUp</button>
             </form>
-            <p><a href="password_reset.html">Forgot password?</a></p>
-            <p>Not A Member Yet? Join Questioner Today <a href="signup.html">SignUp</a> </p>
+            <p>Already have an account? <a href="{% url 'login' %}">Login</a> </p>
         </div>
     </section>
 
