--- a/meetup/templates/home.html
+++ b/meetup/templates/home.html
@@ -27,7 +27,7 @@
                     <li class="current"><a href="home.html">Home</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li>Welcome SIMON OKELLO</li>
-                    <li><a href="index.html">SignOut</a></li>
+                    <li><a href="/logout">SignOut</a></li>
                 </ul>
             </nav>
         </div>
