--- a/meetup/templates/index.html
+++ b/meetup/templates/index.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li class="current"><a href="index.html">Home</a></li>
                     <li><a href="/login">Login</a></li>
-                    <li><a href="signup.html">SignUp</a></li>
-                    <li><a href="admin.html">Admin</a></li>
+                    <li><a href="/register">SignUp</a></li>
+                    <li><a href="/admin">Admin</a></li>
                 </ul>
             </nav>
         </div>
