--- a/meetup/templates/home.html
+++ b/meetup/templates/home.html
@@ -24,8 +24,8 @@
             </div>-->
             <nav>
                 <ul>
-                    <li class="current"><a href="home.html">Home</a></li>
-                    <li><a href="profile.html">Profile</a></li>
+                    <li class="current"><a href="/">Home</a></li>
+                    <li><a href="/profile">Profile</a></li>
                     <li>Welcome SIMON OKELLO</li>
                     <li><a href="/logout">SignOut</a></li>
                 </ul>
@@ -81,7 +81,7 @@
                     {% endif %}
 
                     <textarea rows="4" cols="40" placeholder="Type your question here..."></textarea>
-                    <button input type="button" class="post-btn">Post</button>
+                    <button input type="submit" class="post-btn">Post</button>
                 </form>
             </aside>
 
