--- a/meetup/templates/admin.html
+++ b/meetup/templates/admin.html
@@ -1,75 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Questioner|User</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/admin.css" />
-  </head>
 
-  <body>
-    <header>
-      <div class="container">
-        <div id="branding">
-          <h1><span class="highlight">Questioner</span></h1>
-        </div>
-        <!--<div id="search">
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Questioner|Meetups</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../static/css/admin.css" />
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div id="branding">
+        <h1><span class="highlight">Questioner</span></h1>
+      </div>
+      <!--<div id="search">
                 <form action="">
                     <input type="text" placeholder="Search question...">
                     <button type="submit" class="button">Search</button>
                 </form>
 
             </div>-->
-        <nav>
-          <ul>
-            <li class="current"><a href="index.html">Home</a></li>
-            <!--<li><a href="profile.html">Profile</a></li>-->
-            <li>Welcome ADMIN</li>
-            <li><a href="/logout">SignOut</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <section id="main">
-      <div class="container">
-        <article id="main-col">
-          <h1>Upcomming Meetups</h1>
-          {% if meetups %}
-          <ul id="questions">
-            {% for meetup in meetups %}
-            <li>
-              <h3>
-                <a href="{% url 'detail' meetup.id %}">{{ meetup.title }}</a>
-              </h3>
-              <p>Venue: {{ meetup.venue }}</p>
-              <p>When: {{ meetup.when }}</p>
-              <p>Description: {{ meetup.description }}</p>
-              <a href="{% url 'detail' meetup.id %}">Comments: {{ meetup.comments.count }}</a>
-              <form action="edit_meetup.html">
-                <button type="submit" class="button">Edit</button>
-                <button type="submit" class="button" disabled>Delete</button>
-              </form>
-            </li>
-            {% endfor %}
-          </ul>
-          {% else %}
-          <p>No Meetups are available.</p>
-          {% endif %}
-        </article>
-        <aside id="sidebar">
-          <h3>Create Meetup</h3>
-          <form action="create.html" method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit" class="post-btn">Create</button>
-          </form>
-        </aside>
-      </div>
-    </section>
+      <nav>
+        <ul>
+          <li class="current"><a href="index.html">Home</a></li>
+          <!--<li><a href="profile.html">Profile</a></li>-->
+          <li>Welcome ADMIN</li>
+          <li><a href="/logout">SignOut</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section id="main">
+    <div class="container">
+      <article id="main-col">
+        <h1>Upcomming Meetups</h1>
+        {% if meetups %}
+        <ul id="questions">
+          {% for meetup in meetups %}
+          <li>
+            <h3>
+              <a href="{% url 'detail' meetup.id %}">{{ meetup.title }}</a>
+            </h3>
+            <small><i>Created on:</i>
+              {{ meetup.created_on.date }}
+            </small>
+            <p><strong>Venue:</strong> {{ meetup.venue }}</p>
+            <p><strong>When:</strong> {{ meetup.when }}</p>
+            <p><strong>Description:</strong> {{ meetup.description|slice:":400" }}...</p>
+            <a href="{% url 'detail' meetup.id %}">Comments: {{ meetup.comments.count }}</a>
+            <form action="edit_meetup.html">
+              <button type="submit" class="button">Edit</button>
+              <button type="submit" class="button" disabled>Delete</button>
+            </form>
+          </li>
+          {% endfor %}
+        </ul>
+        {% else %}
+        <p>No Meetups are available.</p>
+        {% endif %}
+      </article>
+      <aside id="sidebar">
+        <h3>Create Meetup</h3>
+        <form action="" method="POST">
+          {% csrf_token %}
+          {{form.as_p}}
+          <button type="submit" class="post-btn">Create</button>
+        </form>
+      </aside>
+    </div>
+  </section>
 
-    <footer>
-      <p>&copy;2019 Questioner. All rights reserved</p>
-    </footer>
-  </body>
+  <footer>
+    <p>&copy;2019 Questioner. All rights reserved</p>
+  </footer>
+</body>
+
 </html>
