--- a/meetup/static/css/style.css
+++ b/meetup/static/css/style.css
@@ -16,7 +16,7 @@ ul{
     margin: 0;
     padding: 0;
 }
-/*header*/
+/*header starts here*/
 header{
     background-color: #f4f4f4;
     padding-top: 30px;
@@ -52,6 +52,8 @@ header a:hover{
     color: #cccccc;
     font-weight: bold;
 }
+/*heade ends here*/
+
 
 /*showcase*/
 #showcase{
