--- a/meetup/templates/detail.html
+++ b/meetup/templates/detail.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Questioner|User</title>
+  <title>Asker|User</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/css/detail.css" />
 </head>
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div id="branding">
-        <h1><span class="highlight">Questioner</span></h1>
+        <h1><span class="highlight"> Asker</span></h1>
       </div>
       <!--<div id="search">
                 <form action="">
@@ -64,7 +64,7 @@
                 Downvote</span></a>
             <hr>
             {% empty %}
-            <p>No comments here yet :(</p>
+            <p>No questions here yet :(</p>
             {% endfor %}
             <div class="comment">
               <form action="" method="post">
@@ -90,7 +90,7 @@
   </section>
 
   <footer>
-    <p>&copy;2019 Questioner. All rights reserved</p>
+    <p>&copy;2019 Asker. All rights reserved</p>
   </footer>
 </body>
 
