--- a/meetup/templates/home.html
+++ b/meetup/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Questioner|User</title>
+    <title>Asker|User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/home.css">
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1> <span class="highlight">Questioner</span></h1>
+                <h1><span class="highlight"> Asker</span></h1>
             </div>
             <!--<div id="search">
                 <form action="">
@@ -35,64 +35,54 @@
     <section id="main">
         <div class="container">
             <article id="main-col">
-                <h1>Questions</h1>
+                <h1>Meetup Questions</h1>
                 <ul id="questions">
-                    {% if meetups %}
+
                     {% for meetup in meetups %}
                     <li>
                         <h3>
-                            <a href="{% url 'detail' meetup.id %}">{{ meetup.title }}</a>
-                          </h3>
-                          {% endfor %}
-                          {% endif %}
-                          <hr>
-                          {% for comment in meetup.comments.all %}
-                          <div class="comment">
-                            <div class="date">{{ comment.created_date }}</div>
-                            <strong>{{ comment.author }}</strong>
-                            <p>{{ comment.text|linebreaks }}</p>
-                          </div>
-                          <a href=""><span class="upvote">({{comment.up_vote}}) Upvote</span></a> || <a href=""><span class="downvote">({{comment.down_vote}})
-                              Downvote</span></a>
-                          {% empty %}
-                          <p>No comments here yet :(</p>
-                          {% endfor %}
-                          
+                            <a href="#">{{ meetup.title }}</a>
+                        </h3>
+                        <small><i>Created on:</i>
+                            {{ meetup.created_on.date }}
+                        </small>
+                        <hr>
+                        {% for comment in meetup.comments.all %}
                         <div class="comment">
-                            <form action="">
-                                <input type="text" name="comment" placeholder="Add a comment...">
-                                <button type="submit" class="button">Comment</button>
-                            </form>
+                            <p>
+                                On {{comment.created_date }}&nbsp;
+                                <b>{{ comment.author }}</b> asked:
+                            </p>
+                            <p>{{ comment.text|linebreaks }}</p>
                         </div>
+                        <a href=""><span class="upvote">({{comment.up_vote}}) Upvote</span></a> || <a href=""><span
+                                class="downvote">({{comment.down_vote}})
+                                Downvote</span></a>
+                                <hr>
+                        {% empty %}
+                        <p>No questions here yet</p>
+                        {% endfor %}
+                        {% empty %}
+                        <p>There is no meetups</p>
+                        {% endfor %}
                     </li>
-                   
+
                 </ul>
             </article>
             <aside id="sidebar">
                 <h3>Post a question</h3>
                 <form action="">
                     <label for="meetup">Select Your Meetup</label> <br>
-                    {% if meetups %}
-                    <select name="meetup" class="">
-                        {% for meetup in meetups %}
-                        <option value="{{ meetup.id }}">{{ meetup.title }}</option>
-                        {% endfor %}
-                    </select>
-                    {% endif %}
-
-                    <textarea rows="4" cols="40" placeholder="Type your question here..."></textarea>
+                    {% csrf_token %}
+                    {{form.as_p}}
                     <button input type="submit" class="post-btn">Post</button>
                 </form>
             </aside>
 
         </div>
     </section>
-
-
-
-
     <footer>
-        <p>&copy;2019 Questioner. All rights reserved</p>
+        <p>&copy;2019 Asker. All rights reserved</p>
     </footer>
 </body>
 
