--- a/meetup/templates/registration/login.html
+++ b/meetup/templates/registration/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Questioner|Login</title>
+    <title>Asker|Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/login.css" />
   </head>
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1><span class="highlight"> Questioner</span></h1>
+          <h1><span class="highlight"> Asker</span></h1>
         </div>
         <nav>
           <ul>
@@ -40,7 +40,7 @@
     </section>
 
     <footer>
-      <p>&copy;2019 Questioner. All rights reserved</p>
+      <p>&copy;2019 Asker. All rights reserved</p>
     </footer>
   </body>
 </html>
