--- a/meetup/templates/registration/login.html
+++ b/meetup/templates/registration/login.html
@@ -17,8 +17,8 @@
         <nav>
           <ul>
             <li class="current"><a href="/">Home</a></li>
-            <li><a href="signup.html">SignUp</a></li>
-            <li><a href="admin.html">Admin</a></li>
+            <li><a href="/register">SignUp</a></li>
+            <li><a href="/admin">Admin</a></li>
           </ul>
         </nav>
       </div>
@@ -31,7 +31,7 @@
          {{ form.as_p }}
           <button type="submit" class="button">Login</button>
         </form>
-        <p><a href="password_reset.html">Forgot password?</a></p>
+        <p><a href="/reset">Forgot password?</a></p>
         <p>
           Not A Member Yet? Join Questioner Today
           <a href="/register">SignUp</a>
