--- a/meetup/templates/signup.html
+++ b/meetup/templates/signup.html
@@ -16,9 +16,9 @@
         </div>
         <nav>
           <ul>
-            <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="admin.html">Admin</a></li>
+            <li class="current"><a href="/">Home</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/admin">Admin</a></li>
           </ul>
         </nav>
       </div>
