--- a/meetup/templates/detail.html
+++ b/meetup/templates/detail.html
@@ -24,10 +24,22 @@
             </div>-->
       <nav>
         <ul>
-          <li class="current"><a href="home.html">Home</a></li>
-          <li><a href="profile.html">Profile</a></li>
-          <li>Welcome SIMON OKELLO</li>
-          <li><a href="/logout">SignOut</a></li>
+          {% if user.is_authenticated %}
+          <li>
+            Welcome {{request.user.first_name}}
+          </li>
+          <!--<li><a href="/profile">Profile</a></li>-->
+          <li>
+            <a href="{% url 'logout' %}">Logout</a>
+          </li>
+          {% else %}
+          <li>
+            You are not logged in
+          </li>
+          <li>
+            <a href="{% url 'login' %}">Login</a>
+          </li>
+          {% endif %}
         </ul>
       </nav>
     </div>
@@ -59,8 +71,8 @@
             </div>
             <!--<div class="arrow-up"></div>
             <div class="arrow-down"></div>-->
-            <a href=""><span class="upvote">({{comment.up_vote}}) Upvote</span></a> || <a href=""><span
-                class="downvote">({{comment.down_vote}})
+            <a href="vote/"><span class="upvote">({{comment.up_vote.count }}) Upvote</span></a> ||
+            <a href="vote/"><span class="downvote">({{comment.down_vote.count}})
                 Downvote</span></a>
             <hr>
             {% empty %}
@@ -71,7 +83,7 @@
                 {% csrf_token %}
                 {{form.as_p}}
                 <button type="submit" class="button">Submit</button>
-            </form>
+              </form>
             </div>
           </li>
 
